# digital_photography

./: CMakeLists.txt  LUT.h  array2D.h  boxblur.cc  fread_dump.cc  fread_dump.h  gauss.cc  guidedfilter.cc  hilite_recon.cc  hilite_recon.h  main.cc  opthelper.h  rescale.h  rt_math.h
maltabcode/: imwrite.m
